<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.wheels2spin.enduser.fragments.RentDurationFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/one_day"
        android:drawableLeft="@drawable/day"
        android:text="@string/one_day"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/one_week"
        android:drawableLeft="@drawable/week"
        android:text="@string/one_week"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/one_month"
        android:text="@string/one_month"
        android:drawableLeft="@drawable/month"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center"
        android:padding="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_drop_off_date"
        android:text="@string/my_drop_off_date"
        android:drawableLeft="@drawable/select_from_calendar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal|top" />
</LinearLayout>
